--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
 # must be unique in a given SonarQube instance
+sonar.host.url=http://volted-monkey-sonarqube.ops:9000
+
 sonar.projectKey=org.sonarqube:cvs-tsk-cert-gen-init
 
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
