--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "aws-lambda": "^0.1.2",
     "aws-sdk": "^2.392.0",
+    "aws-xray-sdk": "^2.3.3",
     "node-yaml": "^3.1.1",
     "reflect-metadata": "^0.1.13"
   },
@@ -51,9 +52,10 @@
     "mocha": "^5.2.0",
     "nyc": "^13.3.0",
     "serverless": "^1.36.3",
+    "serverless-plugin-tracing": "^2.0.0",
     "serverless-plugin-typescript": "^1.1.5",
-    "tslint": "^5.12.1",
     "ts-node-register": "^1.0.0",
+    "tslint": "^5.12.1",
     "typescript": "^3.2.4"
   }
 }
