--- a/src/config/config.yml
+++ b/src/config/config.yml
@@ -4,8 +4,12 @@ sqs:
       region: sqs
       endpoint: http://sqs:9324
       apiVersion: "2012-11-05"
-    queueName: cert-gen-q
+    queueName:
+      - cert-gen-q
+      - update-status-q
   remote:
     params:
       apiVersion: "2012-11-05"
-    queueName: cert-gen-${BRANCH}-queue
+    queueName:
+      - cert-gen-${BRANCH}-queue
+      - update-status-${BRANCH}-queue
