--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Certificate generation initiation task",
   "main": "handler.js",
   "engines": {
-    "node": "10.18.1"
+    "node": "14.*"
   },
   "scripts": {
     "start": "serverless invoke local -f main --path tests/resources/stream-event.json",
@@ -13,15 +13,16 @@
     "build:dev": "node_modules/typescript/bin/tsc && npm run build:copy",
     "build:copy": "find src -type f \\( -name \"*.yml\" -or -name \"*.json\" \\) | cpio -pdm .build && find tests -type f \\( -name \"*.yml\" -or -name \"*.json\" \\)  | cpio -pdm .build",
     "build:docker": "docker-compose -f docker-compose.yml up -d --build",
-    "test": "BRANCH=local SLS_DEBUG=* AWS_XRAY_CONTEXT_MISSING=LOG_ERROR jest --testMatch=\"**/*.unitTest.ts\"",
-    "test-i": "BRANCH=local jest --testMatch=\"**/*.intTest.ts\" --runInBand --passWithNoTests",
-    "tslint": "tslint --project .",
-    "sonar-scanner": "npm run tslint && npm run coverage && sonar-scanner",
-    "prepush": "npm run coverage && npm run build",
+    "test:unit": "BRANCH=local SLS_DEBUG=* AWS_XRAY_CONTEXT_MISSING=LOG_ERROR jest --testMatch=\"**/*.unitTest.ts\" --runInBand",
+    "test": "npm run test:unit -- --coverage",
+    "test-i": "echo 'nothing to do'",
+    "lint": "tslint --project .",
+    "format": "prettier --write .",
+    "sonar-scanner": "sonar-scanner",
+    "prepush": "npm run test && npm run build && npm run test-i",
     "security-checks": "git secrets --scan && git log -p | scanrepo",
-    "coverage": "npm t -- --runInBand --coverage",
     "audit:check": "npm audit --json | audit-filter --nsp-config=.nsprc --audit=-",
-    "audit-dep": "npm audit",
+    "audit": "npm audit",
     "package": "mkdir ${ZIP_NAME} && cp package.json package-lock.json ${ZIP_NAME}/ && cp -r .build/src/* ${ZIP_NAME}/ && cd ${ZIP_NAME} && npm ci --production && rm package.json package-lock.json && zip -qr ../${ZIP_NAME}.zip .",
     "tools-setup": "echo 'nothing to do'"
   },
@@ -54,6 +55,8 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/aws-lambda": "^8.10.34",
     "@types/jest": "^24.0.21",
     "@types/jest-plugin-context": "^2.9.2",
@@ -64,6 +67,7 @@
     "jest": "^26.6.3",
     "jest-plugin-context": "^2.9.0",
     "jest-sonar-reporter": "^2.0.0",
+    "prettier": "^2.3.2",
     "serverless": "^2.19.0",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-plugin-typescript": "^1.1.9",
@@ -85,7 +89,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": " npm run security-checks && npm audit && npm run tslint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": " npm run security-checks && npm run audit && npm run lint && npm run format",
       "pre-push": "npm run prepush"
     }
   }
