--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prepush": "npm run test && npm run build && npm run test-i",
     "security-checks": "git secrets --scan && git log -p | scanrepo",
     "audit:check": "npm audit --json | audit-filter --nsp-config=.nsprc --audit=-",
-    "audit": "npm audit",
+    "audit": "npm audit --prod",
     "package": "mkdir ${ZIP_NAME} && cp package.json package-lock.json ${ZIP_NAME}/ && cp -r .build/src/* ${ZIP_NAME}/ && cd ${ZIP_NAME} && npm ci --production && rm package.json package-lock.json && zip -qr ../${ZIP_NAME}.zip .",
     "tools-setup": "echo 'nothing to do'"
   },
