--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,5 +13,7 @@ sonar.sources=src
 
 sonar.exclusions=.build, src/models/**, src/config/**
 sonar.ts.tslint.configpath=tslint.json
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=coverage/test-report.xml
+sonar.tests=tests
 sonar.sourceEncoding=UTF-8
