--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "serverless": "^2.19.0",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-plugin-typescript": "^2.1.2",
+    "sonar-scanner": "^3.1.0",
     "ts-jest": "^29.1.1",
     "ts-node-register": "^1.0.0",
     "tslint": "^5.20.0",
