--- a/package.json
+++ b/package.json
@@ -48,8 +48,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.547.0",
+    "@smithy/smithy-client": "^2.5.0",
     "aws-lambda": "^1.0.5",
-    "aws-sdk": "^2.1414.0",
     "aws-xray-sdk": "^3.5.0",
     "node-yaml": "^3.2.0",
     "reflect-metadata": "^0.1.13"
