--- a/package.json
+++ b/package.json
@@ -48,9 +48,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.549.0",
+    "@aws-sdk/client-sqs": "^3.547.0",
+    "@aws-sdk/util-dynamodb": "^3.549.0",
+    "@smithy/smithy-client": "^2.5.0",
     "aws-lambda": "^1.0.5",
-    "aws-sdk": "^2.1414.0",
-    "aws-xray-sdk": "^3.5.0",
+    "aws-sdk-client-mock": "^4.0.0",
+    "aws-xray-sdk": "^3.6.0",
     "node-yaml": "^3.2.0",
     "reflect-metadata": "^0.1.13"
   },
